src/main/java/com/example/springstudy/global/error/ErrorResponse.java
package com.example.springstudy.global.error;

import lombok.AllArgsConstructor;
import lombok.Builder;
import lombok.Getter;

@Getter
@Builder
@AllArgsConstructor
public class ErrorResponse {

    private int status;
    private String message;

}